syntax = "proto3";

package grpc.user.v1;

message GetUserResponse {
    string username = 1;
}

message GetUserRequest {
    int64 id = 1;
}

service UserService { 
    rpc GetUser(GetUserRequest) returns (GetUserResponse);
}